Opened 17 years ago
Closed 17 years ago
#1889 closed bug (fixed)
USB plugs on IBM T60 docking station do not work
Reported by: | stippi | Owned by: | mmlr |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Drivers/USB | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I don't know where this bug might originate, maybe it's something with device management in general. The laptop is already plugged in the docking station, and for example the network cable needs to be plugged there, the plug on the laptop is then non functional. But USB devices have to be plugged in directly on the laptop, the docking station plugs do not work. I am trying to hook my KVM switch there (have not tried anything else yet), which is like another hub. If I need to supply any more info, please let me know.
Attachments (4)
Change History (8)
comment:1 by , 17 years ago
Status: | new → assigned |
---|
by , 17 years ago
Attachment: | lsusb_no_kvm.txt added |
---|
Output of "lsusb -v" on Ubuntu with just the laptop and no KVM or docking station.
by , 17 years ago
Attachment: | lsusb_kvm_laptop.txt added |
---|
Output of "lsusb -v" on Ubuntu with just the laptop and KVM attached to a USB port.
by , 17 years ago
Attachment: | lsusb_ds_kvm_ds.txt added |
---|
Output of "lsusb -v" on Ubuntu with the laptop sitting on the docking station and the KVM attached to one of the docking station's ports.
by , 17 years ago
Attachment: | lsusb_ds_kvm_laptop.txt added |
---|
Output of "lsusb -v" on Ubuntu with the laptop sitting on the docking station and the KVM attached to one of the laptops's ports.
comment:2 by , 17 years ago
I have attached some hopefully interesting lsusb output. The Haiku syslog output will come later.
comment:3 by , 17 years ago
Some info that may be relevant, may be confusing or may be a waste of time: http://beosmeanwhilehaiku.wordpress.com/2006/08/28/beos-docking-stations-and-usb-2/
Do you have any relevant syslog information? I don't know how exactly the docking station works. Maybe it is a separate controller that is somehow hot-plugged in or it is just a hub that links to a present port. If you have any other OS on the laptop you could try to find the topology when docked and undocked to see what really happens (lsusb under Linux or the device manager under Windows).