* Fix off-by-one error in port number which caused full- or lowspeed devices   behind highspeed hubs with multiple transaction translators not to work. * The parent hub isn't necessarily the one providing the transaction translator   for a full- or lowspeed device. Therefore we need to inherit the hub/port   addresses to lower devices unless we are a highspeed hub that might be the   actual provider of the transaction translator. This logic error caused full-   and lowspeed devices not to work if they were behind a fullspeed hub that   itself was behind a highspeed hub.

This fixes bugs #1889 and #2501.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26552 a95241bf-73f2-0310-859d-f6bbb57e9c96