src/add-ons/kernel/busses/usb/ohci_rh.cpp
@@ -124,7 +124,7 @@ static ohci_root_hub_string_s sOHCIRootHubStrings[3] = {
 
 
 OHCIRootHub::OHCIRootHub(Object *rootObject, int8 deviceAddress)
-	:	Hub(rootObject, rootObject->GetStack()->IndexOfBusManager(rootObject->GetBusManager()),
+	:	Hub(rootObject, 0, rootObject->GetStack()->IndexOfBusManager(rootObject->GetBusManager()),
 			sOHCIRootHubDevice, deviceAddress, USB_SPEED_FULLSPEED, true)
 {
 }
