src/add-ons/kernel/busses/usb/uhci_rh.cpp
@@ -123,7 +123,7 @@ static uhci_root_hub_string_s sUHCIRootHubStrings[3] = {
 
 
 UHCIRootHub::UHCIRootHub(Object *rootObject, int8 deviceAddress)
-	:	Hub(rootObject, rootObject->GetStack()->IndexOfBusManager(rootObject->GetBusManager()),
+	:	Hub(rootObject, 0, rootObject->GetStack()->IndexOfBusManager(rootObject->GetBusManager()),
 			sUHCIRootHubDevice, deviceAddress, USB_SPEED_FULLSPEED, true)
 {
 }
